--- a/alacritty.yml
+++ b/alacritty.yml
@@ -23,7 +23,7 @@
   # available, otherwise `xterm-256color` is used.
   #TERM: alacritty
 
-#window:
+window:
   # Window dimensions (changes require restart)
   #
   # Number of lines/columns (not pixels) in the terminal. The number of columns
@@ -67,7 +67,7 @@
   #
   # Window opacity as a floating point number from `0.0` to `1.0`.
   # The value `0.0` is completely transparent and `1.0` is opaque.
-  #opacity: 1.0
+  opacity: 0.9 # This require window compositor on Linux eg. picom
 
   # Startup Mode (changes require restart)
   #
@@ -108,19 +108,19 @@
   #multiplier: 3
 
 # Font configuration
-#font:
+font:
   # Normal (roman) font face
-  #normal:
+  normal:
     #
     # Font family
     # Default:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    #family: monospace
+    family: "FiraMono Nerd Font Mono"
 
     # The `style` can be specified to pick a specific face.
-    #style: Regular
+    style: Bold
 
   # Bold font face
   #bold:
@@ -876,11 +876,3 @@
 
   # Print all received window events.
   #print_events: false
-
-  font:
-    normal:
-      family: "FiraCode Nerd Font Mono"
-      style: Bold
-
-  window:
-    opacity: 0.9 # This require window compositor on Linux eg. picom,
